# ratio

./: .gitignore  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  README.md  app.py  dev.sh  install.sh  pyproject.toml
_fs/agents/core/: bedrock_anthropic.agent  bedrock_text.agent  cohere_embedding.agent  combine_content.agent  create_subscription.agent  delete_directory.agent  delete_file.agent  delete_subscription.agent  describe_file.agent  describe_file_version.agent  describe_subscription.agent  (+9 more)
docs/: AGENT_AUTHORING.md  AGENT_DEPLOYMENT.md  AGENT_MANAGER_GUIDE.md  AGENT_TEST_DEBUGGING.md  CLIENT_SDK.md  CLI_CHEAT_SHEET.md  CLI_CONFIGURATION_GUIDE.md  DA_VINCI_TROUBLESHOOTING.md  FRAMEWORK.md  INTRODUCTION.md  PRIMITIVE_AGENT_AUTHORING.md  RATIO_SHELL_REFERENCE.md  REFERENCES.md  STORAGE_GUIDE.md  TUTORIAL.md  index.md
docs/agent_definition_appendix/: AGENT_COMPOSITION.md  CONDITIONS.md  REFERENCES.md
docs/concepts/: agents.md
docs/introduction/: installation_guide.md  system_requirements.md
docs/reference/: file_types.md
ratio/client/: client.py
ratio/core/: stack.py
rto/: config.py  keys.py  shell.py
rto/commands/: authorization.py  base.py  config.py  file_types.py  files.py  initialize.py  navigation.py  process.py  schedule.py  sync.py
tests/: .gitignore  conftest.py  helpers.py  test_agent_api.py  test_agent_lib.py  test_agent_reference_validation.py  test_agent_references.py  test_api_authentication.py  test_scheduler.py  test_storage_api.py
utils/: cleanup.py  ecr_cleanup.py  execution_purge.sh  ratio-shell  unfuck.py
(+180 files in other folders)
